<resources>
    <string name="app_name">LeaderBoard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1">These are the top stories:</string>

    <string name="tab_label1">Learning Leaders</string>
    <string name="tab_label2">Skill IQ Leaders</string>
    <string name="badge">Badge</string>
    <string name="pharis_muigai">Pharis Muigai</string>
    <string name="submitbutton">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="project_github_link">Project/Github Link</string>
    <string name="submit2">Submit</string>
</resources>
